--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -200,9 +200,9 @@ button:disabled {
 
 .chat__sidebar {
   overflow-y: scroll;
-  width: 260px;
+  width: 305px;
   height: 100vh;
-  background-color: var(--primary-blue);
+  background-color: var(--dark-blue);
 }
 
 .chat__sidebar h3 {
@@ -235,6 +235,35 @@ button:disabled {
   background: var(--dark-blue);
   color: #ffffff;
   height: 34px;
+}
+.profile {
+  display: flex;
+  justify-content: space-between;
+  height: 130px;
+  margin-bottom: 10px;
+  background: repeating-linear-gradient(
+    180deg,
+    rgb(181, 9, 233),
+    transparent 137px
+  );
+}
+.profile .left {
+  display: flex;
+}
+.profile .left img {
+  min-width: 70px;
+  max-width: 70px;
+  min-height: 70px;
+  max-height: 70px;
+  margin: 10px;
+  border-radius: 50%;
+}
+.profile .left p {
+  margin: 15px;
+  font: 700 18px Muli, sans-serif;
+}
+.profile .left .room {
+  margin-left: 14px;
 }
 h3 .nameh3 {
   text-align: right;
@@ -295,7 +324,14 @@ h3 .nameh3 {
   margin-bottom: 5px;
   justify-content: space-between;
 }
-
+.message__title img {
+  min-width: 50px;
+  max-width: 50px;
+  min-height: 50px;
+  max-height: 50px;
+  margin: -3px;
+  border-radius: 50%;
+}
 .message__title h4 {
   font-weight: 800;
   margin-right: 10px;
